--- a/main.css
+++ b/main.css
@@ -91,3 +91,67 @@ nav a{
 .about-img{
               margin: 2rem 0;
 }
+
+
+
+/* <section class="pricing"> */
+.pricing{
+              background-color: #00b7ff;
+              color: #fff;
+              text-align: center;
+              padding: 3rem;
+}
+
+.pricing-con{
+              margin-top: 3rem;
+}
+
+.pricing-info h3{
+              font-weight: lighter;
+              font-size: 2rem;
+
+}
+
+.pricing-table {
+              margin-top: 3rem;
+              display:grid ;
+              grid-template-columns: repeat(3, 1fr);
+              grid-gap:1rem;
+}
+
+.pricing-box{
+              background-color: #fff;
+              color: black;
+}
+
+.pricing-box-title{
+              background-color: #e4e4e4;
+              padding: 1rem;
+              text-transform: uppercase;
+              font-weight: bold;
+}
+
+.pricing-box-info{
+              padding: 1rem;
+}
+
+.pricing-blue{
+              color: #00b7ff;
+              font-size: 4rem;
+              font-weight: bold;
+}
+
+.pricing-box-info p{
+              margin: 0.5rem 0;
+}
+
+.pricing-more-info{
+              margin-top: 2rem;
+              display: inline-block;
+              background-color: #14bf5b;
+              padding: 1rem;
+              width: 100%;
+              color: #fff;
+              text-decoration: none;
+              border-radius: 5px;
+}
