--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ nav a{
 
 .header-info{
               margin-top: 5rem;
-              /* border: 1px solid red; */
+              /* border: 1px solid #red; */
               width: 500px;
 }
 
